trustfall_core/src/resources/test_data/valid_queries/simple_filter.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 3) {
        name @output(name: "number_name")
        value @filter(op: "=", value: ["$value"])
    }
}"#,
    arguments: {
        "value": Int64(3)
    },
)
