trustfall_core/src/resources/test_data/parse_errors/invalid_filter_argument_name.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        name @output @filter(op: "has_substring", value: ["$containsåäö"])
    }
}"#,
    arguments: {
        "containsåäö": String("src")
    }
)
